<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/btnReservas"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_reservas"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="292dp"
        android:layout_above="@id/btnAnular"/>
    <Button
        android:id="@+id/btnAnular"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_anular"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="292dp"
        android:layout_above="@id/btnConfirmacion"/>
    <Button
        android:id="@+id/btnDisponibilidad"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_disponibilidad"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="292dp"
        android:layout_above="@id/btnPago"/>

    <Button
        android:id="@+id/btnConfirmacion"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_confirmacion"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="292dp"
        android:layout_above="@id/btnDisponibilidad"/>

    <Button
        android:id="@+id/btnPago"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_pago"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="292dp" />
    <Button
        android:id="@+id/btnTotalRecaudado"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_total"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="292dp"
        android:layout_below="@id/btnPago"/>

    <Button
        android:id="@+id/btnListView"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnTotalRecaudado"
        android:layout_centerInParent="true"
        android:text="@string/btn_listado"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="292dp" />
</RelativeLayout>